--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "fastify": "^4.26.2",
+    "jsonwebtoken": "^9.0.2",
     "postgres": "^3.4.4"
   },
   "devDependencies": {
